syntax = "proto3";
package proto.aweme;
option java_package = "com.more.crawlerhooking.protobuf.aweme";


import "aweme/UserStructV2Protobuf.proto";
import "aweme/VideoStructV2Protobuf.proto";
import "aweme/AwemeStatisticsStructV2Protobuf.proto";
import "aweme/AwemeStatusStructV2Protobuf.proto";
import "aweme/TextExtraStructV2Protobuf.proto";
import "aweme/UrlStructV2Protobuf.proto";
import "aweme/ShareStructV2Protobuf.proto";
import "aweme/AwemeLabelStructV2Protobuf.proto";
import "aweme/ImageInfoStructV2Protobuf.proto";
import "aweme/AwemeRiskStructV2Protobuf.proto";
import "aweme/PositionStructV2Protobuf.proto";
import "aweme/VideoTextStructV2Protobuf.proto";
import "aweme/SpecialStickerStructV2Protobuf.proto";
import "aweme/DescendantStructV2Protobuf.proto";
import "aweme/GameStructV2Protobuf.proto";
import "aweme/MicroAppStructV2Protobuf.proto";
import "aweme/CommerceActivityStructV2Protobuf.proto";
import "aweme/NewFaceStickerStructV2Protobuf.proto";
import "aweme/LongVideoStructV2Protobuf.proto";
import "aweme/AwemeSearchStructV2Protobuf.proto";
import "aweme/PreloadStructV2Protobuf.proto";
import "aweme/AwemeFloatingCardStructV2Protobuf.proto";
import "aweme/InteractionStickerStructV2Protobuf.proto";
import "aweme/CommerceConfigDataV2Protobuf.proto";
import "aweme/AwemeCommerceStickerStructV2Protobuf.proto";
import "aweme/VideoControlV2Protobuf.proto";
import "aweme/AwemeControlStructV2Protobuf.proto";
import "aweme/AnchorStructV2Protobuf.proto";
import "aweme/RelationLabelStructV2Protobuf.proto";
import "aweme/MixStructV2Protobuf.proto";
import "aweme/HotListStructV2Protobuf.proto";
import "aweme/AwemeCommerceStructV2Protobuf.proto";
import "aweme/AwemeNationalTaskStructV2Protobuf.proto";
import "aweme/BannerTipV2Protobuf.proto";
import "aweme/AwemeACLStructV2Protobuf.proto";
import "aweme/AwemeAnchorStructV2Protobuf.proto";
import "aweme/CNYStructV2Protobuf.proto";
import "aweme/WebcastRoomFeedCellStructV2Protobuf.proto";
import "aweme/MaskStructV2Protobuf.proto";
import "aweme/LinkMatchStructV2Protobuf.proto";
import "aweme/VideoReplyStructV2Protobuf.proto";
import "aweme/AnchorCommonStructV2Protobuf.proto";
import "aweme/HybridLabelStructV2Protobuf.proto";
import "aweme/RelationRecommendStructV2Protobuf.proto";
import "aweme/UserProfileStructV2Protobuf.proto";
import "aweme/AwemeActivityStructV2Protobuf.proto";
import "aweme/VisualSearchEntryStructV2Protobuf.proto";
import "aweme/CloudGameStructV2Protobuf.proto";
import "aweme/MutualStructV2Protobuf.proto";
import "aweme/BoostStructV2Protobuf.proto";
import "aweme/BottomBarStructV2Protobuf.proto";
import "aweme/PlaylistInfoV2Protobuf.proto";

message AwemeStructV2{
    string aweme_id = 1;
    string desc = 2;
    int64 create_time = 3;
    UserStructV2 author = 4;
    MusicStructV2 music = 5;
    repeated ChallengeStructV2 cha_list = 6;
    VideoStructV2 video = 7;
    string share_url = 8;
    int32 user_digged = 9;
    AwemeStatisticsStructV2 statistics = 10;
    AwemeStatusStructV2 status = 11;
    string extra = 12;
    int32 rate = 13;
    repeated TextExtraStructV2 text_extra = 14;
    UrlStructV2 label_large = 15;
    UrlStructV2 label_thumb = 16;
    int32 is_top = 17;
    UrlStructV2 label_top = 18;
    ShareStructV2 share_info = 19;
    UrlStructV2 label_origin_author = 20;
    string distance = 21;
    UrlStructV2 label_music_starter = 22;
    UrlStructV2 label_private = 23;
    repeated AwemeLabelStructV2 video_labels = 24;
    bool is_vr = 25;
    string landing_page = 26;
    bool is_ads = 27;
    int32 aweme_type = 30;
    bool cmt_swt = 35;
    repeated ImageInfoStructV2 image_infos = 36;
    AwemeRiskStructV2 risk_infos = 37;
    bool is_relieve = 38;
    UrlStructV2 label_friend = 39;
    string sort_label = 40;
    repeated PositionStructV2 position = 41;
    repeated PositionStructV2 uniqid_position = 42;
    int32 bodydance_score = 45;
    int32 is_hash_tag = 47;
    bool is_pgcshow = 48;
    string region = 49;
    repeated VideoTextStructV2 video_text = 50;
    SpecialStickerStructV2 sp_sticker = 52;
    string ad_schedule = 53;
    int32 collect_stat = 54;
    repeated VideoTextStructV2 label_top_text = 55;
    string stickers = 57;
    AwemeStructV2 forward_item = 58;
    string forward_comment_id = 59;
    string forward_item_id = 62;
    string group_id = 63;
    string pre_forward_id = 64;
    bool prevent_download = 65;
    repeated PositionStructV2 nickname_position = 66;
    int32 item_comment_settings = 68;
    DescendantStructV2 descendants = 69;
    string raw_ad_data = 70;
    GameStructV2 game_info = 71;
    MicroAppStructV2 micro_app_info = 72;
    bool with_promotional_music = 73;
    string link_ad_data = 74;
    CommerceActivityStructV2 gesture_red_packet = 76;
    CommerceActivityStructV2 activity_pendant = 77;
    NewFaceStickerStructV2 sticker_detail = 78;
    repeated LongVideoStructV2 long_video = 79;
    int32 item_duet = 80;
    int32 item_react = 81;
    AwemeSearchStructV2 hot_info = 82;
    int64 star_atlas_order_id = 83;
    string label_music_starter_text = 84;
    bool without_watermark = 85;
    PreloadStructV2 preload = 86;
    string ad_order_id = 88;
    string desc_language = 91;
    AwemeFloatingCardStructV2 floating_card_content = 92;
    repeated InteractionStickerStructV2 interaction_stickers = 93;
    int32 ad_link_type = 95;
    int32 take_down_reason = 96;
    string take_down_desc = 97;
    string misc_info = 99;
    repeated string origin_comment_ids = 101;
    repeated CommerceConfigDataV2 commerce_config_data = 102;
    AwemeCommerceStickerStructV2 commerce_sticker_info = 103;
    bool enable_top_view = 104;
    int32 distribute_type = 105;
    VideoControlV2 video_control = 106;
    int32 is_effect_designer = 107;
    int32 ad_aweme_source = 108;
    AwemeControlStructV2 aweme_control = 109;
    bool has_vs_entry = 110;
    AnchorStructV2 anchor = 111;
    RelationLabelStructV2 feed_relation_label = 112;
    MixStructV2 mix_info = 113;
    string simple_shop_seeding = 114;
    HotListStructV2 hot_list = 115;
    AwemeCommerceStructV2 commerce_info = 116;
    AwemeNationalTaskStructV2 national_task_info = 117;
    BannerTipV2 banner_tip = 118;
    AwemeACLStructV2 acl_info = 119;
    AwemeAnchorStructV2 anchor_info = 121;
    CNYStructV2 cny_info = 123;
    bool is_familiar = 124;
    bool need_vs_entry = 125;
    WebcastRoomFeedCellStructV2 cell_room = 126;
    string live_reason = 127;
    string video_feed_tag = 128;
    MaskStructV2 mask_info = 129;
    LinkMatchStructV2 link_match = 130;
    VideoReplyStructV2 video_reply_info = 131;
    repeated AnchorCommonStructV2 anchors = 132;
    repeated HybridLabelStructV2 hybrid_label = 133;
    RelationRecommendStructV2 relation_recommend_info = 134;
    UserProfileStructV2 user_profile_init_info = 135;
    bool with_survey = 136;
    AwemeSearchStructV2 dou_discount_mix_info = 137;
    AwemeACLStructV2 aweme_acl = 138;
    AwemeActivityStructV2 activity = 139;
    VisualSearchEntryStructV2 vs_entry = 142;
    int32 item_stitch = 143;
    CloudGameStructV2 cloud_game = 144;
    bool show_sticker_guide = 147;
    int32 story_ttl = 148;
    bool is_horizontal = 149;
    repeated string geofencing_regions = 150;
    string city = 151;
    MutualStructV2 mutual_relation_tmp = 154;
    string anchors_extras = 160;
    bool allow_gift = 161;
    MutualStructV2 mutual_relation = 162;
    repeated MaskStructV2 mask_infos = 163;
    BoostStructV2 boost_tag_info = 164;
    BottomBarStructV2 bottom_bar = 165;
    PlaylistInfoV2 playlist_info = 167;
}